--- a/style.css
+++ b/style.css
@@ -32,6 +32,23 @@ body
 
 /*FIN TRANSFORMATION JQUERY*/
 
+.test{
+    color: white;
+    position: absolute;
+    display: flex;
+    transform-origin: left;
+    transform: translateX(-2000px);
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.test h2{
+    flex-direction: column;
+    width: 500px;    
+    margin-left: 100px;   
+}
+
 .back
 {
     position: absolute;
@@ -572,8 +589,6 @@ nav
     width: 100%;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.75);
-    margin-left: 90px;
-    z-index: 2000;
 }
 .textexpo
 {
