--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body
 
 /*FIN TRANSFORMATION JQUERY*/
 
-.test{
+.page_connexion{
     color: white;
     position: absolute;
     display: flex;
@@ -43,10 +43,11 @@ body
     background-color: rgba(255, 255, 255, 0.75);
 }
 
-.test h2{
+.contenu_connexion form{
     flex-direction: column;
     width: 500px;    
-    margin-left: 100px;   
+    margin-left: 100px;
+    color: black;
 }
 
 .back
