--- a/css/partenariat.css
+++ b/css/partenariat.css
@@ -1,4 +1,4 @@
-.GRETA{
+.PARTENARIAT{
     background-color: blue;
     position: absolute;
     display: flex;
@@ -9,9 +9,10 @@
     background-color: rgba(255, 255, 255, 0.75);
 }
 
-.titreGreta{
+.titrePartenariat{
     margin-top: 0px;
     flex-direction: column;    
     margin-left: 100px;
     color: black;
 }
+
