--- a/css/connexion.css
+++ b/css/connexion.css
@@ -1,12 +1,4 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor. 
-*/
-/* 
-    Created on : 8 févr. 2018, 11:17:25
-    Author     : Nicolas
-*/
+
 
 .Rectangle_arrondi_2 {
   border-width: 1px;
@@ -119,6 +111,13 @@ and open the template in the editor.
   width: 64px;
   height: 64px;
   z-index: 55;
+}
+
+.titreCoPers{
+    margin-top: 0px;
+    flex-direction: column;    
+    margin-left: 100px;
+    color: black;
 }
 
 
