--- a/css/depotStage.css
+++ b/css/depotStage.css
@@ -1,4 +1,4 @@
-.CDI{
+.DEPOT_STAGE{
     background-color: blue;
     position: absolute;
     display: flex;
@@ -7,4 +7,11 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.75);
+}
+
+.titreDepotStage{
+    margin-top: 0px;
+    flex-direction: column;    
+    margin-left: 100px;
+    color: black;
 }
