--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ nav
     display: flex;
     background-color:#1b435c;
     opacity: 0.8;
-    width: 90px;
+    width: 5.6%;
     height: 100%;
     align-self: flex-start;
     flex-direction: column;
@@ -112,7 +112,7 @@ nav
 .logoisaac
 {
     position: absolute;
-    width: 283px;   
+    width: 17.5%;  
     margin-top: 0px;
     z-index: 30000;
 }
