--- a/css/cdi.css
+++ b/css/cdi.css
@@ -11,12 +11,13 @@
     background-color: rgba(255, 255, 255, 0.75);
 }
 
-.titreGreta{
+.titreCDI{
     font-family: 'Quicksand';
     margin-left: 600px;
 }
 
-#affichContenuDivUne,#affichContenuDivUneImage{
+#affichContenuDivUne{
+    text-align: center;
     margin-left: -500px;
     margin-top: 90px;
     height: 300px;
@@ -24,35 +25,35 @@
     background-color: grey;
 }
 
-label{
-    margin-left: 30px;
-    margin-top: 30px;
-    font-family: 'Quicksand';
-    color: white;
-}
-
-SELECT{
-    margin-top: 30px;
-    font-family: 'Quicksand';
-}
-
-#affichContenuDivUneImage input{
+.URL{
     margin-top: 20px;
+    margin-left: -100px;
+    width: 400px;
+    height: 35px;
+    font-size: 35px;
 }
 
-#affichContenuDivUneImage label{
-    margin-left: -15px;
-}
-
-#affichContenuDivUneImage p{
+label{
+    margin-left: -120px;
+    font-family: 'Quicksand';
     color: white;
 }
 
-textarea{
-    margin-left: -90px;
+.uploadV{
+    margin-left: -100px;
+    font-size: 20px;
 }
 
-.validerImage{
-    margin-left: -55px;
-    width:100%;
+.btnValiderV{
+    margin-left: -100px;
+    font-size: 20px;
+    width: 300px;
+}
+
+video{  
+    margin-top: 5px;
+}
+.titreVideoDivUne{
+    font-family: 'Quicksand';
+    color: white;
 }
