--- a/css/style.css
+++ b/css/style.css
@@ -631,10 +631,13 @@ h2
 {
     font-family: century gothic;
     color: #17278a;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: lighter;
     white-space: nowrap;
-    margin-top: 100px;
+     position:relative;
+     top:100px;
+    
+    margin-top: 50px;
     margin-left: 100px;
 }
 .textexpo p:nth-child(4)
@@ -825,4 +828,15 @@ lu{
  height: 2100px;
  width: 1800px;
  position: relative;
+}
+
+  .block {
+  background-color: rgb(222, 33, 115);
+  opacity: 0.302;
+  position: absolute;
+  left: 814px;
+  top: 286px;
+  width: 343px;
+  height: 419px;
+  z-index: 170;
 }
