--- a/css/connexion.css
+++ b/css/connexion.css
@@ -29,14 +29,13 @@
 }
 
 .connexion {
-  font-size: 72px;
+  font-size: 150px;
   font-family: "Century Gothic";
   color: rgb(23, 39, 138);
   line-height: 1.2;
   text-align: center;
   position: absolute;
-  left: 1150px;
-  top: 200px;
+  margin-left: 200px;
   z-index: 45;
 }
 
