--- a/css/partenariat.css
+++ b/css/partenariat.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
 .PARTENARIAT{
     background-color: blue;
     position: absolute;
@@ -15,4 +17,18 @@
     margin-left: 100px;
     color: black;
 }
+
+.UNIVERSITES{
+    margin-left: 200px;
+    margin-top: 100px;
+    background-color: rgba(204, 204, 0, 0.75);
+    position: absolute;
+    width: 500px;
+    height: 300px;
+}
+
+.titreUniv{
+    font-family: 'Quicksand';
+}
+
 
