ajout page js+css+php

--- a/css/panoramaPresse.css
+++ b/css/panoramaPresse.css
@@ -1,4 +1,4 @@
-.PARTENARIAT{
+.PRESSE{
     background-color: blue;
     position: absolute;
     display: flex;
@@ -8,3 +8,5 @@
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.75);
 }
+
+
