Validation upload image partenariat apprentissage

--- a/css/partenariatApprentissage.css
+++ b/css/partenariatApprentissage.css
@@ -36,5 +36,10 @@
     color: black;
     font-family: 'Quicksand';
 }
+.formImagePartenariat{
+    margin-left: -500px;
+    margin-top: 90px;
+    background-color: yellow;
+}
 
 
