Ajout partie partenariat js

--- a/css/partenariatApprentissage.css
+++ b/css/partenariatApprentissage.css
@@ -32,9 +32,14 @@
     font-family: 'Quicksand';
 }
 
-.lienUniv{
-    color: black;
+#btnPrec{
     font-family: 'Quicksand';
+    margin-top: 410px;
+    height: 30px;
+}
+
+.contenuUniv{
+    
 }
 
 
