--- a/css/partenariat.css
+++ b/css/partenariat.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
 .PARTENARIAT{
     background-color: blue;
     position: absolute;
@@ -7,4 +9,39 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.75);
+}
+
+.Contenu_Univ{
+    width: 500px;
+    height: 300px;
+    margin-top: 100px;
+    margin-left: -200px;
+    flex-direction: column;    
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.contenuUniv{
+    width: 500px;
+    height: auto;
+    margin-left: -4000px;
+    margin-top: 150px;
+    flex-direction: column;    
+}
+
+.titreUniv{
+    font-family: 'Quicksand';
+}
+
+p{
+    font-family: 'Quicksand';
+}
+
+.btnPrec{
+    width: 500px;
+    height: auto;
+    flex-direction: column;  
+}
+
+.btnPrec{
+    margin-left: -4000px;
 }
