Ajout partie partenariat js

--- a/css/partenariatApprentissage.css
+++ b/css/partenariatApprentissage.css
@@ -41,5 +41,10 @@
 .contenuUniv{
     
 }
+.formImagePartenariat{
+    margin-left: -500px;
+    margin-top: 90px;
+    background-color: yellow;
+}
 
 
