--- a/css/partenariatApprentissage.css
+++ b/css/partenariatApprentissage.css
@@ -19,14 +19,17 @@
 }
 
 .formImagePartenariat{
-    margin-left: -500px;
+    margin-left: -600px;
     margin-top: 90px;
     background-color: yellow;
 }
-.formImagePartenariat{
-    margin-left: -500px;
-    margin-top: 90px;
-    background-color: yellow;
+
+.affichImage{
+    background-color: gray;
+    margin-left: -10%;
+    margin-top: 10%;
+    margin-right: -20%;
 }
+
 
 
