--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ nav
     list-style: none;
     align-self: center;
     font-size: 22px;
-    font-family: myriad pro;
+    font-family: 'Impact';
     margin-bottom: 50px;
     color: white;
     letter-spacing: 2.5px;
