--- a/css/formation.css
+++ b/css/formation.css
@@ -18,7 +18,6 @@
 
 .superieur {
   background-color: rgb(222, 33, 115);
-  opacity: 0.302;
   position: absolute;
   left: 350px;
   top: 150px;
@@ -40,7 +39,6 @@
 
 .pro {
   background-color: rgb(252, 195, 0);
-  opacity: 0.302;
   position: absolute;
   left: 550px;
   top: 150px;
@@ -88,4 +86,8 @@
   height: 3px;
   z-index: 172;
 }
+.pro .superieur .generalestechno{
+    font-size: 20px;
+}
+
 
