--- a/css/ufa.css
+++ b/css/ufa.css
@@ -108,8 +108,8 @@
     width: 500px;
     font-family: 'Quicksand';
     position: absolute;
-    margin-top: 500px;
-    margin-left: 550px;
+    margin-top: 50%;
+    margin-left: 35%;
 }
 
 .titreModa{
