--- a/css/greta.css
+++ b/css/greta.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
 .GRETA{
     background-color: blue;
     position: absolute;
@@ -10,6 +12,7 @@
 }
 
 .titreGreta{
+    font-family: 'Quicksand';
     margin-top: 0px;
     flex-direction: column;    
     margin-left: 100px;
