--- a/css/panoramaPresse.css
+++ b/css/panoramaPresse.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
 .PRESSE{
     background-color: blue;
     position: absolute;
@@ -7,6 +9,18 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.75);
+}
+
+.titrePresse{
+    margin-left: 45%;
+    font-family: 'Quicksand';
+}
+
+.introductionTPresse{
+    font-family: 'Quicksand';
+    position: absolute;
+    margin-left: 22%;
+    margin-top: 10%;
 }
 
 
