--- a/css/formation.css
+++ b/css/formation.css
@@ -14,8 +14,9 @@
 .titreFormation{
     margin-top: 0px;
     flex-direction: column;    
-    margin-left: 300px;
+    margin-left: 45%;
     color: black;
+    font-family: "Quicksand";
 }
 
 .superieur {
@@ -60,7 +61,7 @@
   -ms-transform: matrix( 1,0,0,1.00037803123524,0,0);
   position: absolute;
   margin-left: 75%;
-  margin-top: 250px;
+  margin-top: 30%;
   z-index: 173;
 }
 
@@ -91,7 +92,7 @@
   position: absolute;
   left: 10%;
   top: -15%;
-  margin-top: 200px;
+  margin-top: 20%;
   z-index: 182;
 }
 
