--- a/css/connexion.css
+++ b/css/connexion.css
@@ -37,10 +37,25 @@
   position: absolute;
   
   left:860px;
-  top:290px;
+  top:240px;
   z-index: 45;
 }
 
+.connexion:hover {
+  font-size: 40px;
+  font-family: "Century Gothic";
+  color: rgb(23, 39, 138);
+  line-height: 1.2;
+  text-align: center;
+  position: absolute;
+  
+  left:860px;
+  top:240px;
+  z-index: 45;
+    cursor: pointer;
+    transition: 1s;
+    opacity: 0.5
+}
 .boutonvalider {
   border-width: 1px;
   border-color: rgb(255, 255, 255);
@@ -74,10 +89,10 @@
   font-family: "Verdana";
   color: rgb(121, 121, 121);
   line-height: 2;
-  text-align: left;
+  justify-content: flex-start;
   position: absolute;
   left: 860px;
-  top: 320px;
+  top: 281px;
   z-index: 46;
 }
 
